--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  cursor: url('/cursor.png'), auto;
+}
+
 html {
   scroll-behavior: smooth;
 }
