--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+/* * {
   cursor: url('/cursor.png'), auto;
-}
+} */
 
 html {
   scroll-behavior: smooth;
